...
            }
            
        }.onAppear {
            self.gamesDetailViewModel.loadGamesDetail(id: game.id)
            self.readFavoriteIdViewModel.loadFavoriteId(gameId: Int32(game.id))
        }
        .navigationBarTitle(Text("Detail Game"), displayMode: .inline)        .font(.system(size: 15))
        .navigationBarItems(trailing:self.readFavoriteIdViewModel.favorite.gameId == 0 || self.isSaved == false ? Button(action: {
            if self.gamesDetailViewModel.gamesDetail.id != 0 {
                self.addFavoriteViewModel.gameId = Int32(self.gamesDetailViewModel.gamesDetail.id)
                self.addFavoriteViewModel.gameName = self.gamesDetailViewModel.gamesDetail.name
                self.addFavoriteViewModel.gameDescription = self.gamesDetailViewModel.gamesDetail.gamesDetailDescription
                self.addFavoriteViewModel.gameBackgroundImage = self.gamesDetailViewModel.gamesDetail.backgroundImage
...
